<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
>

<LinearLayout
    android:orientation="vertical"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_namapeminjam"
        android:hint="Nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:inputType="text"
        app:met_baseColor="@color/colorPrimaryDark"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorPrimaryDark"
        app:met_singleLineEllipsis="true"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_organisasi"
        android:hint="Oganisasi/Departemen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:inputType="text"
        app:met_baseColor="@color/colorPrimaryDark"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorPrimaryDark"
        app:met_singleLineEllipsis="true"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_deskripsikegiatan"
        android:hint="Deskripsi Kegiatan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        app:met_baseColor="@color/colorPrimaryDark"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorPrimaryDark"
        app:met_singleLineEllipsis="true"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_jammulai"
        android:hint="Jam Mulai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:inputType="phone"
        app:met_baseColor="@color/colorPrimaryDark"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorPrimaryDark"
        app:met_singleLineEllipsis="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_jamakhir"
        android:hint="Jam Berakhir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:inputType="phone"
        app:met_baseColor="@color/colorPrimaryDark"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorPrimaryDark"
        app:met_singleLineEllipsis="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        />

    <Button
        android:id="@+id/btn_submit"
        android:text="Submit"
        android:textColor="@android:color/white"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_below="@id/et_deskripsikegiatan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@android:color/black"
        style="@style/ButtonSignUp"
        app:shadowEnabled="true"
        app:shadowHeight="5dp"
        app:cornerRadius="10dp"

        />

</LinearLayout>
</android.support.v7.widget.CardView>
